[package]
name = "require_rs"
version = "0.1.0"
edition = "2021"
license = "MIR or Apache-2.0"
readme = "README.md"
repository = "https://github.com/LuuuXXX/require_rs.git"
description = """
Binanry finder.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.6"